force-app/main/default/objects/Court__c/fields/Child_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Child_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child&apos;s Attorney</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Child&apos;s Attorney)</relationshipLabel>
    <relationshipName>Petitions6</relationshipName>
    <type>Lookup</type>
</CustomField>