force-app/main/default/objects/Court__c/fields/Other_Client_named_on_Petition__c.field-meta.xml
<CustomField>
    <fullName>Other_Client_named_on_Petition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Client&apos;s named on Petition</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 OR 4)</booleanFilter>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Other Client&apos;s named on Petition)</relationshipLabel>
    <relationshipName>Petitions5</relationshipName>
    <type>Lookup</type>
</CustomField>