force-app/main/default/objects/Court__c/recordTypes/Siblings.recordType-meta.xml
<RecordType>
    <fullName>Siblings</fullName>
    <active>true</active>
    <label>Siblings</label>
</RecordType>